--- a/notebooks/Rates.ipynb
+++ b/notebooks/Rates.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Fixing: Daily fixing rates such as EUR/USD, EUR/NOK, etc.\n",
     "\n",
-    "Interest rates gathered:\n",
+    "Interest rates:\n",
     "- EURIBOR: 1 week, 1 month, 3 months, 6 months, 12 months.\n",
     "- EONIA: ON."
    ]
